mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  serviceName: "shopping-list"
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      role: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        role: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:6.0.2
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongo-pvc
  volumeClaimTemplates:
  - metadata:
      name: mongo-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: standard

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    role: mongodb
