invm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: investment-manager
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: invm-api
            port:
              number: 8080
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: invm-app
            port:
              number: 3000
